# smithy-playground

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .mergify.yml  .sbtopts  .scala-steward.conf  .scalafix.conf  .scalafmt.conf  CONTRIBUTING.md  README.md  build.sbt  example.smithyql  flake.nix  rebuild.sh  release-plugin.sh  release.sh  sbt.repositories  shell.nix  smithy-build.json  update-libs.sh
.github/workflows/: ci.yml  clean.yml  dependency-graph.yml  nix.yml  plugin.yml  sourcegraph.yml
project/: plugins.sbt
smithy/: demo.smithy
tree-sitter-smithyql/: .gitignore  Cargo.toml  binding.gyp  example.smithyql  grammar.js  package-lock.json  package.json
tree-sitter-smithyql/bindings/node/: binding.cc  index.js
tree-sitter-smithyql/bindings/rust/: lib.rs
tree-sitter-smithyql/corpus/: bindings-multiple.txt  bindings.txt  comment.txt  empty.txt  full-of-comments.txt  just-query.txt  just-use.txt  service-reference.txt  statements.txt  string.txt  struct-1.txt  struct-2.txt  struct-3.txt
tree-sitter-smithyql/src/: grammar.json  node-types.json  parser.c
tree-sitter-smithyql/src/tree_sitter/: parser.h.gch
tree-sitter-smithyql/test/corpus/: bindings-comma.txt  comment.txt  full-of-comments.txt  service-reference.txt  simple-complete.txt
vscode-extension/: .gitignore  .scalafmt.conf  .vscodeignore  LICENSE  README.md  build.sbt  flake.nix  grammar.tmLanguage.json  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-extension/project/: plugins.sbt
vscode-extension/src/: coursier.ts  extension.ts
(+588 files in other folders)
